--- a/css/main.css
+++ b/css/main.css
@@ -1,71 +1,1 @@
-.main-container {
-  width: 100%;
-  height: 100%;
-}
-
-.title {
-  margin-top: 10%;
-  color: white;
-}
-.subtitle {
-  color: white;
-  width: 100%;
-  border: 2px solid purple;
-}
-.header {
-  width: 100%;
-  height: 50%;
-  position: absolute;
-  z-index: 0;
-  background-image: url('../img/BG_white_paper_page.png');
-  background-attachment: fixed;
-  background-size: contain;
-  background-position: 0 -140px;
-  box-sizing: content-box;
-
-  border: 1px solid black;
-}
-
-.logo {
-  margin-top: 5%;
-  color: white;
-}
-
-.body-content {
-  border: 2px solid pink;
-}
-
-.middle-text {
-  border: 3px solid black;
-}
-.card {
-  box-shadow: 2px 12px 35px -1px rgba(0, 0, 0, 0.14);
-}
-.big-row {
-  border: 2px solid yellow;
-}
-.content-row {
-  border: 2px solid red;
-
-  padding: 15px;
-}
-
-.btn-primary {
-  background: green;
-  border: none;
-  padding-top: 14px;
-  padding-bottom: 8px;
-  padding-right: 30px;
-  padding-left: 30px;
-}
-.bullet-points {
-  color: blue;
-}
-li:before {
-  content: '✓';
-  margin-left: -1em;
-  margin-right: 0.1em;
-}
-ul {
-  list-style: none;
-}
+@charset "UTF-8";@font-face{font-family:Bold;src:url("../fonts/proxima_nova_bold-webfont.woff")}@font-face{font-family:Regular;src:url("../fonts/proxima_nova_regular-webfont.woff")}@font-face{font-family:Semi-Bold;src:url("../fonts/proxima_nova_semibold-webfont.woff")}@font-face{font-family:Light;src:url("../fonts/mark_simonson_-_proxima_nova_light-webfont.woff")}h1{font-family:Bold}h3{font-family:Semi-Bold}p{font-family:Light;color:#787777;line-height:1.3;text-align:justify;padding-right:80px}.main-container{width:100%;height:200%}.title{margin-top:7%;color:white}.subtitle{color:white;width:100%;font-family:Light}.header{width:100%;height:50%;position:absolute;z-index:0;background-image:url("../img/BG_white_paper_page.png");background-attachment:fixed;background-size:contain;background-position:0 -140px;box-sizing:content-box;border:1px solid black}.logo{margin-top:5%;color:white}.card{padding:15px;padding-right:0;padding-top:10px;padding-bottom:10px;box-shadow:2px 12px 35px -1px rgba(0,0,0,0.14)}.card h4,.card small{font-family:Light}.card h6{font-family:Light;font-weight:500;letter-spacing:0.1em}.form-group{font-family:Light}.content-row{border:2px solid red;padding:15px;padding-bottom:20px}.btn{text-transform:uppercase;padding:15px 80px 15px 80px;border:2px solid white;color:white}.btn:hover{background:white;color:blue}.btn-primary{text-transform:uppercase;padding:20px 70px 20px 70px;border:2px solid white;color:white;background:#4fb6aa;border:none}.btn-primary:hover{background:white;color:blue}.btn-primary:hover{background:#4fb6aa}.btn-primary h6{margin-bottom:0}.bullet-points{color:blue}li:before{content:"✓"}ul{padding-left:0;padding-right:80px;font-family:Regular;list-style:none}.blue-box{background:blue;color:white;margin-top:10%;margin-bottom:10%}.blue-row-content{border:2px solid black;margin-right:20px;margin-top:5%;margin-bottom:5%;min-width:325px}.blue-row-content h4{font-family:Semi-Bold}.blue-row-content h6{font-family:Light;margin-bottom:0}.body-content{border:2px solid pink}.middle-text{border:3px solid black}.big-row{border:2px solid yellow}
