--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,8 @@
   src: url('../fonts/mark_simonson_-_proxima_nova_light-webfont.woff');
 }
 
+$theme-color: #063e81;
+
 h1 {
   font-family: Bold;
 }
@@ -31,56 +33,53 @@ p {
   padding-right: 80px;
 }
 
-$white-text: white;
+.white-text {
+  color: white;
+}
+
 $btn-border-color: white;
 $button-padding: 15px 80px 15px 80px;
-
 @mixin button($button-padding, $btn-border-color) {
   text-transform: uppercase;
   padding: $button-padding;
   border: 2px solid $btn-border-color;
-  color: $white-text;
   &:hover {
     background: white;
     color: blue;
   }
 }
 
-@mixin border($border-color) {
-  border: 2px solid $border-color;
+$background-btn-lnk: white;
+@mixin btn-link($background-btn-lnk: true) {
+  @if $background-btn-lnk {
+    color: $theme-color;
+  } @else {
+    color: white;
+  }
+  background: $background-btn-lnk;
+  margin-top: 30px;
+  border: none;
 }
 
-.main-container {
-  width: 100%;
-  height: 200%;
+@mixin for-img() {
+  background-attachment: scroll;
+  background-size: cover;
+  box-sizing: content-box;
 }
-.title {
-  margin-top: 7%;
-  color: $white-text;
-}
+
 .subtitle {
-  $border: 2px solid #1bbd16;
-  color: $white-text;
-  width: 100%;
+  border: 2px solid #1bbd16;
   font-family: Light;
 }
 .header {
-  width: 100%;
+  @include for-img();
   height: 50%;
   position: absolute;
-  z-index: 0;
   background-image: url('../img/BG_white_paper_page.png');
-  background-attachment: fixed;
-  background-size: contain;
   background-position: 0 -140px;
-  box-sizing: content-box;
+  z-index: 0;
 
   border: 1px solid black;
-}
-
-.logo {
-  margin-top: 5%;
-  color: $white-text;
 }
 
 .card {
@@ -131,8 +130,14 @@ $button-padding: 15px 80px 15px 80px;
   }
 }
 
+.btn-outline-single {
+  color: $theme-color;
+  border: 2px solid $theme-color;
+  margin: 40px;
+}
+
 .bullet-points {
-  color: blue;
+  color: $theme-color;
 }
 li:before {
   content: '✓';
@@ -145,9 +150,10 @@ ul {
   list-style: none;
 }
 
-.blue-box {
-  background: blue;
-  color: $white-text;
+.wide-blue-box {
+  @include for-img();
+  height: auto;
+  background-image: url('../img/bg_new.png');
   margin-top: 10%;
   margin-bottom: 10%;
 }
@@ -165,6 +171,35 @@ ul {
   h6 {
     font-family: Light;
     margin-bottom: 0;
+  }
+}
+
+.image-container {
+  @include for-img();
+  height: 37vh;
+  background-image: url('../img/shutterstock_742230118.jpg');
+}
+
+.info-card {
+  padding: 30px;
+  padding-right: 0;
+  border: none;
+  box-shadow: -15px -8px 119px -77px rgba(0, 0, 0, 0.66);
+  border-radius: 0;
+
+  .btn-link {
+    @include btn-link($background-btn-lnk);
+  }
+}
+
+.blue-block {
+  background: $theme-color;
+  h5 {
+    padding-right: 20px;
+  }
+  .btn-link {
+    background: $theme-color;
+    @include btn-link($background-btn-lnk: false);
   }
 }
 
