--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,10 +27,12 @@ h3 {
 
 p {
   font-family: Light;
-  color: rgb(120, 119, 119);
+  color: rgb(97, 97, 97);
   line-height: 1.3;
   text-align: justify;
   padding-right: 80px;
+  font-size: 14px;
+  margin: 0;
 }
 
 .white-text {
@@ -68,18 +70,15 @@ $background-btn-lnk: white;
 }
 
 .subtitle {
-  border: 2px solid #1bbd16;
   font-family: Light;
 }
 .header {
   @include for-img();
-  height: 50%;
+  height: 60%;
   position: absolute;
   background-image: url('../img/BG_white_paper_page.png');
   background-position: 0 -140px;
   z-index: 0;
-
-  border: 1px solid black;
 }
 
 .card {
@@ -105,7 +104,6 @@ $background-btn-lnk: white;
 }
 
 .content-row {
-  border: 2px solid red;
   padding: 15px;
   padding-bottom: 20px;
 }
@@ -159,7 +157,6 @@ ul {
 }
 
 .blue-row-content {
-  border: 2px solid black;
   margin-right: 20px;
   margin-top: 5%;
   margin-bottom: 5%;
@@ -201,14 +198,4 @@ ul {
     background: $theme-color;
     @include btn-link($background-btn-lnk: false);
   }
-}
-
-.body-content {
-  border: 2px solid pink;
-}
-.middle-text {
-  border: 3px solid black;
-}
-.big-row {
-  border: 2px solid yellow;
 }
